try to fix keyboard on mobile

--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ html {
 html, body {
 	margin: 0;
 	width: 100%;
-	font-size: 16pt;
+	font-size: 12pt;
 }
 
 * {
